--- a/netlify.toml
+++ b/netlify.toml
@@ -7,5 +7,5 @@
 
 [build]
   base    = ""
-  publish = "target/site"
-  command = "./mvnw clean site"
+  publish = ""
+  command = "chmod a+x ./mvnw && ./mvnw clean install"
